--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "express-4.x-local-example",
   "version": "0.0.0",
   "description": "Express 4.x app using Passport for authentication with username and password.",
+  "engines": {
+    "node": "6.11.1"
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
   "keywords": [
     "example",
     "express",
